test/runnable/algo.nt
module algo;

void main() {
    import std.algorithm : array, map;

    auto a = "hello";
    auto b = map([a], a => a);
    print(b.front);
}
