test/fail_compilation/lambda_escape_return_tuple.nt
module lambda_escape_return_tuple;

auto test() {
    auto lambda = () => 2;
    return (lambda, 0);
}

void main() {
    test()[0]();
}
